<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="saveProduct"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageCadastro1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/imageCadastro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/imageCadastro3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:minHeight="48dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp" />


    <com.blackcat.currencyedittext.CurrencyEditText

        android:id="@+id/editValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="Valor"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp" />

    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/editTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_phone"
        android:inputType="phone"
        app:mask="(__) _____-____"
        app:maskCharacter="_"
        app:maskStyle="completable"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/editDescricao"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="validateProductData"
        android:text="@string/register_product" />
</LinearLayout>